--- a/app/src/main/res/layout/screen_details.xml
+++ b/app/src/main/res/layout/screen_details.xml
@@ -1,5 +1,18 @@
-<WebView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+
+    <WebView
     android:id="@+id/headline_details_wv"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"/>
+
+    <ProgressBar android:id="@+id/progress_circular"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        android:layout_centerInParent="true"/>
+
+</RelativeLayout>
